# svc-infra

./: .flake8  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  DEPRECATION.md  Makefile  README.md  SECURITY.md  alembic.ini  cliff.toml  docker-compose.test.yml  docs-changelog.json  mkdocs.yml  mypy.ini  package.json  pyproject.toml  pytest.ini
.github/: agents.md  copilot-instructions.md  plans.md
.github/instructions/: AGENTS.md  PLANS.md  PLANS_METHOD.md  copilot-instructions.md
.github/workflows/: acceptance.yml  ci.yml  publish-pypi.yml  publish.yml
docs/: acceptance.md  admin.md  api.md  billing.md  cache.md  cli.md  data-lifecycle.md  database.md  deploy.md  docs-and-sdks.md  documents.md  dx.md  environment.md  error-handling.md  getting-started.md  idempotency.md  index.md  integration-patterns.md  jobs.md  loaders.md  logging.md  migration.md  object-router.md  observability.md  ops.md  rate-limiting.md  resilience.md  security.md  storage.md  tenancy.md  testing.md  timeouts-and-resource-limits.md  versioned-integrations.md  webhooks.md  websocket.md
docs/adr/: 0001-auth-tokens-rbac-audit-log.md  0001-content-loaders.md  PLANS.md
docs/reference/: api.md
examples/: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  README.md.backup  SCAFFOLDING.md  USAGE.md  alembic.ini  create_tables.py  db-migrate.sh  pyproject.toml  run.sh
examples/docs/: CLI.md  DATABASE.md  DB_MIGRATE.md  SCAFFOLD.md
examples/migrations/: env.py
examples/migrations/versions/: 5e28b1694124_add_user_and_entity_tables.py  914b6864eff6_add_user_and_entity_tables.py
examples/scripts/: DUPLICATE_PREVENTION.md  auth_reference.py  quick_setup.py  scaffold_models.py  test_duplicate_prevention.py
examples/src/svc_infra_template/: __init__.py  main.py  main.py.backup  settings.py
examples/src/svc_infra_template/api/: __init__.py
examples/src/svc_infra_template/api/v1/: __init__.py  routes.py  routes.py.bak
examples/src/svc_infra_template/db/: __init__.py  base.py  models.py  schemas.py  session.py
examples/src/svc_infra_template/documents/: __init__.py  models.py  router.py  storage.py
examples/src/svc_infra_template/models/: __init__.py  project.py  task.py  user.py
examples/src/svc_infra_template/schemas/: project.py  task.py  user.py
examples/src/svc_infra_template/storage/: __init__.py  router.py
examples/tests/: test_documents.py
migrations/: env.py  script.py.mako
migrations/versions/: 1e40fb30e763_initial_schema.py  2a02f37f00e0_initial_migration_create_user_tables.py
scripts/: verify_transcript.py
src/svc_infra/: __init__.py  exceptions.py  utils.py
tests/: conftest.py  test_db_http_sort.py  test_db_smoke.py  test_health_route_registration.py
tests/acceptance/: README.md  __init__.py  _seed.py  app.py  conftest.py  models.py  test_abuse_heuristics_acceptance.py  test_admin_impersonation.py  test_api_openapi_and_cors.py  test_auth_a101_flow.py  test_auth_a102_password_policy.py  test_auth_a103_lockout.py  test_auth_a106_api_keys.py  test_auth_acceptance.py  test_billing_acceptance.py  test_cache_smoke.py  test_data_lifecycle_acceptance.py  test_docs_sdks_a10_acceptance.py  test_documents_acceptance.py  test_dx_openapi_acceptance.py  test_idempotency_and_concurrency.py  test_jobs_and_scheduler_acceptance.py  test_logging_no_spam_and_headers.py  test_metrics_exposure.py  test_ops_acceptance.py  test_payments_basic_flows.py  test_rate_limiting_acceptance.py  test_smoke_ping.py  test_storage_acceptance.py  test_tenancy_acceptance.py  test_timeouts_acceptance.py  test_webhooks_acceptance.py  test_websocket_acceptance.py
tests/api/: test_fastapi_middleware.py  test_fastapi_setup.py  test_httpx_timeout_mapping.py  test_oauth_router.py  test_openapi_mutators_enrichment.py  test_rate_limit_dependency.py  test_redis_ratelimit_store.py  test_request_size_limit.py  test_timeout_middleware.py
tests/auth/: conftest.py  test_auth_routers.py  (+6 more)
(+485 files in other folders)
