[tool.poetry]
name = "svc-infra"
version = "0.0.3"
description = "Infrastructure for building and deploying prod-ready services"
authors = ["Ali Khatami <aliikhatami94@gmail.com>"]
readme = "README.md"
packages = [{ include = "svc_infra", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.116.1"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.42"
pydantic-settings = "^2.10.1"
mcp = "^1.13.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
