[tool.poetry]
name = "svc-infra"
version = "0.1.5"
description = "Infrastructure for building and deploying prod-ready services"
authors = ["Ali Khatami <aliikhatami94@gmail.com>"]
readme = "README.md"
packages = [{ include = "svc_infra", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.116.1"
python-dotenv = "^1.1.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
pydantic-settings = "^2.10.1"
mcp = "^1.13.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.2"
greenlet = "^3"
typer = "^0.16.1"
fastapi-users = {extras = ["oauth", "sqlalchemy2"], version = "^14.0.1"}
authlib = "^1.6.2"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
httpx-oauth = "^0.16.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.2.0"
fastapi-users-db-sqlalchemy = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
fastapi-users-db-sqlalchemy = "^7.0.0"

[tool.poetry.scripts]
svc-infra-auth = "svc_infra.auth.cli:app"
svc-infra-db = "svc_infra.db.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
